# source/src/model/apiDocumentation.model.go
@@ -7,38 +7,22 @@ import (
 
 // Generated by https://quicktype.io
 
-type DataSet struct {
+type ApiDocumentation struct {
 	MetadataWithID `bson:",inline"`
-	DataInfo       `bson:",inline"`
-	DataConfig     `bson:",inline"`
+	Name           string                 `json:"name" bson:"name"`
+	Source         string                 `json:"source" bson:"source"`
+	Url            string                 `json:"url" bson:"url"`
+	Description    string                 `json:"description" bson:"description"`
+	Header         map[string]interface{} `json:"header" bson:"header"`
+	Body           map[string]interface{} `json:"body" bson:"body"`
+	Parameter      map[string]interface{} `json:"parameter" bson:"parameter"`
 }
 
-type DataInfo struct {
-	Author      string `json:"author" bson:"author"`
-	DataName    string `json:"data_name" bson:"data_name"`
-	Category    string `json:"category" bson:"category"`
-	DataSource  string `json:"data_source" bson:"data_source"`
-	Description string `json:"data_description" bson:"data_description"`
+type ApiDocumentation_View struct {
+	ApiDocumentation `bson:",inline"`
 }
 
-type DataConfig struct {
-	DataTable  bool                     `json:"data_table" bson:"data_table"`
-	UploadFile bool                     `json:"upload_file" bson:"upload_file"`
-	Column     []map[string]interface{} `json:"column" bson:"column"`
-	ValueRow   []map[string]interface{} `json:"value_row" bson:"value_row"`
-}
-
-type Column struct {
-	ColumnName string `json:"column_name" bson:"column_name"`
-	AliasName  string `json:"alias_name" bson:"alias_name"`
-	DataType   string `json:"data_type" bson:"data_type"`
-}
-
-type DataSet_View struct {
-	DataSet `bson:",inline"`
-}
-
-type DataSet_Search struct {
+type ApiDocumentation_Search struct {
 	//? Regex
 	Search   string                   `json:"search"`
 	SearchBy []string                 `json:"searchBy"`
@@ -47,7 +31,7 @@ type DataSet_Search struct {
 	Request
 }
 
-func (this *DataSet_Search) HandleFilter(listFilterAnd *[]bson.M) {
+func (this *ApiDocumentation_Search) HandleFilter(listFilterAnd *[]bson.M) {
 	if search := this.Search; search != "" {
 		filterOr := bson.M{}
 		listFilterOr := []bson.M{}
